--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.6.0",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "15.2.1",
     "postcss": "^8.5.3",
