--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "@mui/styles": "^6.4.8",
     "@mui/system": "^6.4.8",
     "@reduxjs/toolkit": "^2.6.1",
+    "@types/leaflet-routing-machine": "^3.2.8",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.6.0",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-routing-machine": "^3.2.12",
     "next": "15.2.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
