--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@mui/styles": "^6.4.8",
     "@mui/system": "^6.4.8",
     "@reduxjs/toolkit": "^2.6.1",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.0.0",
     "@types/leaflet-routing-machine": "^3.2.8",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
