--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^12.6.0",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-routing-machine": "^3.2.12",
+    "lucide-react": "^0.488.0",
     "next": "15.2.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -44,6 +45,7 @@
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^3.2.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
