--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.0.0",
     "@types/leaflet-routing-machine": "^3.2.8",
+    "@vis.gl/react-google-maps": "^1.5.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
@@ -46,6 +47,7 @@
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.2.0",
+    "use-debounce": "^10.0.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
