--- a/package.json
+++ b/package.json
@@ -23,31 +23,27 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.0.0",
-    "@types/leaflet-routing-machine": "^3.2.8",
     "@vis.gl/react-google-maps": "^1.5.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.6.0",
-    "leaflet-defaulticon-compatibility": "^0.1.2",
-    "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.488.0",
     "next": "15.2.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.4.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.2.0",
-    "use-debounce": "^10.0.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
