--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.4.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
