--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.0.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@vis.gl/react-google-maps": "^1.5.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
