--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.6.0",
     "lucide-react": "^0.488.0",
+    "luxon": "^3.6.1",
     "next": "15.2.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -60,6 +61,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
+    "@types/luxon": "^3.6.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
