--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.6.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.488.0",
     "luxon": "^3.6.1",
     "next": "15.2.1",
@@ -61,6 +62,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/luxon": "^3.6.2",
     "@types/node": "^20",
     "@types/react": "^19",
