--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "browser-image-compression": "^2.0.2",
+    "chart.js": "^4.5.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.6.0",
@@ -39,10 +40,12 @@
     "next": "15.2.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.4.1",
+    "react-ga4": "^2.1.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
